<resources>
    <string name="app_name" translatable="false">Piano Music Drum Pad : Piano Keyboard</string>
    <string name="in_app_name" translatable="false">Piano Music Drum Pad : Piano Keyboard</string>
    <string name="BottomA" translatable="false">A3</string>
    <string name="BottomASharp" translatable="false">A#3</string>
    <string name="BottomB" translatable="false">B3</string>
    <string name="BottomC" translatable="false">C3</string>
    <string name="BottomCSharp" translatable="false">C#3</string>
    <string name="BottomD" translatable="false">D3</string>
    <string name="BottomDSharp" translatable="false">D#3</string>
    <string name="BottomE" translatable="false">E3</string>
    <string name="BottomF" translatable="false">F3</string>
    <string name="BottomFSharp" translatable="false">F#3</string>
    <string name="BottomG" translatable="false">G3</string>
    <string name="BottomGSharp" translatable="false">G#3</string>
    <string name="DoubleHighC" translatable="false">C6</string>
    <string name="HighA" translatable="false">A5</string>
    <string name="HighASharp" translatable="false">A#5</string>
    <string name="HighB" translatable="false">B5</string>
    <string name="HighC" translatable="false">C5</string>
    <string name="HighCSharp" translatable="false">C#5</string>
    <string name="HighD" translatable="false">D5</string>
    <string name="HighDSharp" translatable="false">D#5</string>
    <string name="HighE" translatable="false">E5</string>
    <string name="HighF" translatable="false">F5</string>
    <string name="HighFSharp" translatable="false">F#5</string>
    <string name="HighG" translatable="false">G5</string>
    <string name="HighGSharp" translatable="false">G#5</string>
    <string name="MiddleA" translatable="false">A4</string>
    <string name="MiddleASharp" translatable="false">A#4</string>
    <string name="MiddleB" translatable="false">B4</string>
    <string name="MiddleC" translatable="false">C4</string>
    <string name="MiddleCSharp" translatable="false">C#4</string>
    <string name="MiddleD" translatable="false">D4</string>
    <string name="MiddleDSharp" translatable="false">D#4</string>
    <string name="MiddleE" translatable="false">E4</string>
    <string name="MiddleF" translatable="false">F4</string>
    <string name="MiddleFSharp" translatable="false">F#4</string>
    <string name="MiddleG" translatable="false">G4</string>
    <string name="MiddleGSharp" translatable="false">G#4</string>
    <string name="bpm_title" translatable="false">BPM</string>
    <string name="numberPick" translatable="false">%s</string>
    <string name="Disclaimer" ><u>Disclaimer</u></string>
    <string name="Disclaimer_title">Disclaimer</string>
    <string name="disclaimer_discption" >- This Application is developed for convenience of app user to get piano keyboard at one place \n\n
- All the images or sound are copied or downloaded from the internet or free domain , app do not claiming to be an owner of any assets\n\n
- App not taking any money or will not responsible for any kind of transaction fail or success or any kind of payment issue\n\n
- For any privacy or copyrights related issue please mail us at :- </string>
    <string name="share_text" translatable="false">"Hi there, I'm using “Piano Music Drum Pad : Piano Keyboard” app , click to get it now:-"</string>
    <string name="Privacy_Policy" ><u>Privacy Policy</u></string>
    <string name="change_beat">Change Beat</string>
    <string name="change_sound">Change Sound</string>
    <string name="check_notes">Check</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_tune">Choose Scale</string>
    <string name="chords_game_help">Tutorial / Help for Chords Game</string>
    <string name="chords_game_information1">Test your knowledge of Chords with this game. Check your results from the progress button on the main menu.</string>
    <string name="chords_game_tutorial1">Press the \'Play\' button to start the challenge. The app will randomly choose a chord from the level you selected and root note you chose.</string>
    <string name="chords_game_tutorial2">Press the \'Check\' button to see if you have played the chord correctly. This will be automated, so really can be used to end the challenge early.</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="enter_filename">Type a name for the file:</string>
    <string name="error_icon_content_description">Error</string>
    <string name="help">Help</string>
    <string name="jam_help">Tutorial / Help for Jam</string>
    <string name="menu">Menu</string>
    <string name="metronome">Metronome</string>
    <string name="metronome_settings">Metronome Settings</string>
    <string name="minus">-</string>
    <string name="open_tune">Open Tune</string>
    <string name="options">Options</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="play_tune">Play / Stop</string>
    <string name="plus">+</string>
    <string name="recognition_help">Tutorial / Help for Recognition</string>
    <string name="record_stop">Record / Stop</string>
    <string name="scale_highlight">Scale to Show</string>
    <string name="scales_game_help">Tutorial / Help for Scales Game</string>
    <string name="search_menu_title">Search</string>
    <string name="select_beat">Select Beat</string>
    <string name="select_key_to_highlight">Select Key To Jam To</string>
    <string name="select_note_count">Select number of notes to play</string>
    <string name="select_sound">select_sound</string>
    <string name="select_tune">Select Scale</string>
    <string name="select_user_tune">Select Tune</string>
    <string name="sound">Sound</string>
    <string name="volume">Volume</string>
    <string name="wrong">WRONG</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="chords_game_tutorial3">Select the \'Level\' button to change the level. You can program which chords to be included in the \\\'My Focus Group\\\' item.</string>
    <string name="chords_game_tutorial4">Press the \'Root Note\' button to change the root note (e.g. C, F, Eb etc). This forms the basis for the chords.</string>
    <string name="chords_information1">Learn your chords. Either play and repeat, or use as a reference.</string>
    <string name="chords_tutorial1">Press the \'Root Note\' button to change the root note (e.g. C, F, Eb etc). This forms the basis for the chords.</string>
    <string name="chords_tutorial2">Press the \'Choose Chord\' button and select the chord you wish to learn or view as a reference.</string>
    <string name="chords_tutorial3">Select the \'Play\' button to play the chord. After listening, play the chord back on the keyboard.</string>
    <string name="chords_tutorial4">Then, select the \'Check\' button to check if you played the chord correctly.</string>
    <string name="chords_tutorial5">Select the \'Reference\' button to see the pattern of the chords as a reference. You should turn it off when testing yourself on the scales.</string>
    <string name="chords_help">Tutorial / Help for Chords</string>
    <string name="beat">Beat</string>
    <string name="scales_game_information1">Test your knowledge of Scales with this game. Check your results from the progress button on the main menu.</string>
    <string name="scales_game_tutorial1">Press the \'Play\' button to start the challenge. The app will randomly choose a scale from the level you selected and root note you chose.</string>
    <string name="scales_game_tutorial2">Press the \'Check\' button to see if you have played the scale correctly. This will be automated, so really can be used to end the challenge early.</string>
    <string name="scales_game_tutorial3">Select the \'Level\' button to change the level. You can program which scales to be included in the \'My Focus Group\' item.</string>
    <string name="scales_game_tutorial4">Press the \'Root Note\' button to change the root note (e.g. C, F, Eb etc). This forms the basis for the scales.</string>
    <string name="scales_game_tutorial5">\'Scale Direction\' if you want to perform the scales descending or both ascending and descending.</string>
    <string name="scales_help">Tutorial / Help for Scales</string>
    <string name="scales_information1">Learn your scales. Either play and repeat, or use as a reference.</string>
    <string name="scales_tutorial1">Press the \'Root Note\' button to change the root note (e.g. C, F, Eb etc). This forms the basis for the scales.</string>
    <string name="scales_tutorial2">Press the \'Choose Scale\' button and select the scale you wish to learn or view as a reference.</string>
    <string name="scales_tutorial3">Select the \'Play-Stop\' button to play the scale. After listening, play the scale back on the keyboard.</string>
    <string name="scales_tutorial4">Then, select the \'Check\' button to check if you played the scale correctly.</string>
    <string name="scales_tutorial5">Select the \'Reference\' button to see the pattern of the scales as a reference. You should turn it off when testing yourself on the scales.</string>
    <string name="scales_tutorial6">\'Scale Direction\' if you want to perform the scales descending or both ascending and descending.</string>
    <string name="correct">YOU\\\'VE MASTERED IT!</string>
    <string name="jam_information1">Learn to jam and improvise in any key. Choose a key and play within the highlighted notes to create a melody or chord progression. Start with the core note of the key with another one and then build up.</string>
    <string name="jam_tutorial1">Press the \'Root Note\' button to change the root note (e.g. C, F, Eb etc). This forms the basis for the keys.</string>
    <string name="jam_tutorial2">Press the \'Key\' button and select the key you wish to jam in. (E.g. C Major, C Minor if C was the root note). Then jam away.</string>
    <string name="jam_tutorial3">Want to record a melody? Select the \'Record\' button and play. Select the \'Record\' button again to stop recording.</string>
    <string name="jam_tutorial4">Select the \'Play-Stop\' button to play the recording or play a saved recording you have just opened.</string>
    <string name="jam_tutorial5">Select the \'Open-Save\' button to open a previously saved tune or save the tune you have just recorded.</string>
    <string name="jam_tutorial6">Select the \'Metronome\' button to start the beat. A long press will go into the metronome settings.</string>
    <string name="jam_tutorial7">Select a chord button to highlight the main notes in the chord within the key.</string>
    <string name="edit_contact" >Edit Contact</string>
    <string name="message" >Message</string>
    <string name="web" >WebSite</string>
    <string name="sendWhatsAppMessage" >Send WhatsApp Message</string>
    <string name="str_fea_title0" >Welcome!</string>
    <string name="str_fea_des0" >This app comes with an aftercall feature, giving you the ability to access your app after each phone call. To use the aftercall feature the following. permissions are needed</string>
    <string name="str_fea_title4" >Phone Status</string>
    <string name="str_fea_des4" >Helps identify incoming and outgoing call states.</string>
    <string name="str_fea_title6" >Notification</string>
    <string name="str_fea_des6" >To stay updated!</string>
    <string name="str_turm_condition" >\u0020 <u>Terms of Services</u></string>
    <string name="str_privacy_olicy" ><u>Privacy Policy</u></string>
    <string name="str_decline" >DECLINE</string>
    <string name="str_accept" >Continue</string>
    <string name="str_by_accepting" >By continuing you are agree to </string>
    <string name="str_and" >\u0020 and </string>
</resources>