<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/popins_semibold"
        android:lineSpacingExtra="15dp"
        android:text="@string/in_app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom"
        android:layout_below="@+id/tvHeading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/popins_reguler"
                android:text="@string/str_fea_title0"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/tv_dec0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/popins_reguler"
                android:text="@string/str_fea_des0"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/tv_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/popins_reguler"
                android:text="@string/str_fea_title4"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/tv_dec1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/popins_reguler"
                android:text="@string/str_fea_des4"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />


            <TextView
                android:id="@+id/tv_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/popins_reguler"
                android:text="@string/str_fea_title6"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/tv_dec3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/popins_reguler"
                android:text="@string/str_fea_des6"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/Admob_Native_Frame_two"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginRight="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_1sdp"
        android:orientation="vertical"
        android:visibility="visible" />


    <LinearLayout
        android:id="@+id/tv_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Admob_Native_Frame_two"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true">

        </CheckBox>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/popins_reguler"
                    android:text="@string/str_by_accepting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/popins_reguler"
                    android:text="@string/str_privacy_olicy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/popins_reguler"
                    android:text="@string/str_and"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tvTurmCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/popins_reguler"
                    android:text="@string/str_turm_condition"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_bottom"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvDecline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_decline"
            android:fontFamily="@font/popins_semibold"
            android:gravity="center"
            android:padding="@dimen/_15sdp"
            android:text="@string/str_decline"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_accept"
            android:fontFamily="@font/popins_semibold"
            android:gravity="center"
            android:padding="@dimen/_15sdp"
            android:text="@string/str_accept"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>