<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inner_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/metronomeSettings"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/metronome_settings"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="@dimen/value_5"
        android:orientation="horizontal"
        android:padding="@dimen/value_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/bpm_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/background_button"
                android:minWidth="50dp"
                android:textColor="@color/white"
                android:text="@string/minus"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/bpmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/background_button"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/value_5"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/value_5">

        <TextView
            android:id="@+id/click_volume_static_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/volume"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/click_volume_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:max="100"
            android:progress="100"
            android:saveEnabled="true" />

        <TextView
            android:id="@+id/click_volume_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="100%"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_5"
        android:orientation="horizontal"
        android:padding="@dimen/value_5">

        <TextView
            android:id="@+id/beat_static_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/beat"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/beat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="4-4"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:id="@+id/change_beat_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/background_button"
                android:minWidth="160dp"
                android:minHeight="50dp"
                android:textColor="@color/white"
                android:text="@string/change_beat"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/value_5"
        android:orientation="horizontal"
        android:padding="@dimen/value_5">

        <TextView
            android:id="@+id/sound_static_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/sound"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sound_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Click"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/change_sound_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:background="@drawable/background_button"
                android:minWidth="160dp"
                android:minHeight="50dp"
                android:text="@string/change_sound"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
