<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llEditContact"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/cfs_ic_edit_popup"
                    app:tint="@color/text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:maxLines="1"
                    android:text="@string/edit_contact"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMessage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:tint="@color/text_color"
                    android:src="@drawable/cfs_ic_message_popup" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:maxLines="1"
                    android:text="@string/message"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llWhatsApp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:tint="@color/text_color"
                    android:src="@drawable/cfs_ic_whatapp_popup" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:maxLines="1"
                    android:text="@string/sendWhatsAppMessage"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llWeb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/cfs_ic_web_popup" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:maxLines="1"
                    android:text="@string/web"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>